--- a/Lab_2/requirements.txt
+++ b/Lab_2/requirements.txt
@@ -76,6 +76,9 @@ pure_eval==0.2.3
 pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.1
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
 pytz==2025.2
